Fixed overflow issue when the sidebar extends down too far.

--- a/css/personalcampaign.css
+++ b/css/personalcampaign.css
@@ -1,3 +1,6 @@
+div#crm-container {
+	overflow: visible !important;
+}
 #pcp { position: relative; }
 
 #thermometer {
